--- a/views/home.hbs
+++ b/views/home.hbs
@@ -1,11 +1,11 @@
 <!--
-	Author: Eduvy
+	Author: Hansis
 -->
 <!DOCTYPE html>
 <html lang="en">
 
 <head>
-	<title>Eduvy</title>
+	<title>Hansis</title>
 	<!-- Meta tag Keywords -->
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
@@ -56,7 +56,7 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
 								</button>
 							</div>
 							<h1>
-								<a class="navbar-brand" href="/">Eduvy
+								<a class="navbar-brand" href="/">Hansis
 									<span>A digital Rostrum</span>
 								</a>
 							</h1>
@@ -92,7 +92,7 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
 									<li>
 										<div class="banner_info_grid">
 											<i class="fa fa-graduation-cap" aria-hidden="true"></i>
-											<h3>Eduvy Supervision</h3>
+											<h3>Hansis Supervision</h3>
 											<p>Quality Education needs Digitalisation</p>
 											<a href="#about" class="w3-join scroll">Join Now</a>
 										</div>
@@ -100,7 +100,7 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
 									<li>
 										<div class="banner_info_grid">
 											<i class="fa fa-graduation-cap" aria-hidden="true"></i>
-											<h3>Eduvy Supervision</h3>
+											<h3>Hansis Supervision</h3>
 											<p>We focus on your dream</p>
 											<a href="#about" class="w3-join scroll">Join Now</a>
 										</div>
@@ -108,7 +108,7 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
 									<li>
 										<div class="banner_info_grid">
 											<i class="fa fa-graduation-cap" aria-hidden="true"></i>
-											<h3>Eduvy Supervision</h3>
+											<h3>Hansis Supervision</h3>
 											<p>education needs complete solution</p>
 											<a href="#about" class="w3-join scroll">Join Now</a>
 										</div>
@@ -150,7 +150,7 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
 		</div>
 		<!---728x90--->
 		<!-- services -->
-		<div class="services" id="services" style="margin-top:56px">
+		<div class="services" id="services" style="margin-top:150px">
 			<div class="container">
 				<h3 class="title">Our Services</h3>
 				<div class="services-grids">
@@ -161,7 +161,7 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
 						<div class="services-info">
 							<h4>Student Management</h4>
 							<p>Parents as well as students will get regular updates about HOMEWORK, CLASSWORK, ATTENDANCE , NOTICES etc. on their
-								separate portal of EDUVY mobile app. Result and its analysis will be directly shown on parents portal in more efficient
+								separate portal of Hansis mobile app. Result and its analysis will be directly shown on parents portal in more efficient
 								way. </p>
 						</div>
 					</div>
@@ -223,9 +223,9 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
 			<div class="agile-homes-w3l  grid">
 				<div class="col-md-6 home-agile-left">
 					<figure class="effect-moses">
-						<img src="images/eduvy mobile appl.jpg" alt="" style="height:500px" />
+						<img src="images/Hansis mobile appl.jpg" alt="" style="height:500px" />
 						<figcaption>
-							<h4>Eduvy</h4>
+							<h4>Hansis</h4>
 							<p>A Digital Rostrum</p>
 						</figcaption>
 					</figure>
@@ -299,7 +299,7 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
 					<figure class="effect-moses">
 						<img src="images/3.jpg" alt="" />
 						<figcaption>
-							<h4 style="font-weight: 500; font-size: 70px;">Eduvy</h4>
+							<h4 style="font-weight: 500; font-size: 70px;">Hansis</h4>
 							<p style="font-size:25px">Your supporting Hand</p>
 						</figcaption>
 					</figure>
@@ -326,7 +326,7 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
 							</li>
 							<li>
 								<a href="images/g3.jpg" class=" mask b-link-stripe b-animate-go   swipebox" title="">
-									<img src="/images/eduvy attendance.jpg" alt="" style="height: 234px;" />
+									<img src="/images/Hansis attendance.jpg" alt="" style="height: 234px;" />
 									<div>
 										<h5>Attendance</h5>
 										<span>Offline and online push on notifications of daily attendance</span>
@@ -344,7 +344,7 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
 							</li>
 							<li>
 								<a href="images/g5.jpg" class=" mask b-link-stripe b-animate-go   swipebox" title="">
-									<img src="/images/eduvy paymnt.jpeg" alt="" />
+									<img src="/images/Hansis paymnt.jpeg" alt="" />
 									<div>
 										<h5>Pay Easily</h5>
 										<span>Securely pay your children fees online</span>
@@ -379,8 +379,8 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
 								</a>
 							</li>
 							<li>
-								<a href="images/eduvy schhol information.jpg" class=" mask b-link-stripe b-animate-go   swipebox" title="">
-									<img src="images/eduvy schhol information.jpg" alt="" />
+								<a href="images/Hansis schhol information.jpg" class=" mask b-link-stripe b-animate-go   swipebox" title="">
+									<img src="images/Hansis schhol information.jpg" alt="" />
 									<div>
 										<h5>Info.. Area</h5>
 										<span>Get full imformation reltaed to school,syllabus,parents-Teacher-Meet and exam schedule</span>
@@ -464,7 +464,7 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
 		<div class="newsletter" style="margin-top:5px">
 			<div class="container">
 				<h3 class="title">Why us?</h3>
-				<p class="nunc nunc1"> Eduvy is the best replacement for traditional paper based institute management system by bringing complete automation
+				<p class="nunc nunc1"> Hansis is the best replacement for traditional paper based institute management system by bringing complete automation
 					in working procedure and to connect all stakeholders through our ERP system using centralized web portal and mobile
 					application,thus reducing comunication gap between all stakeholders (Students, Teachers, Parents)
 				</p>
@@ -486,9 +486,7 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
 								<figure>
 									<!-- Slide content - whatever you want -->
 									<img src="https://mfiles.alphacoders.com/597/597902.jpg" alt=" " class="img-responsive" />
-									<figcaption>Carl Lii
-										<span>Sed maximus eros quis leo congue ipsum sagittis.</span>
-									</figcaption>
+									
 								</figure>
 							</a>
 						</li>
@@ -496,9 +494,7 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
 							<a href="#" class="mis-container">
 								<figure>
 									<img src="https://mfiles.alphacoders.com/597/597902.jpg" alt=" " class="img-responsive" />
-									<figcaption>Michael Paul
-										<span>Sed maximus eros quis leo congue ipsum sagittis.</span>
-									</figcaption>
+								
 								</figure>
 							</a>
 						</li>
@@ -506,9 +502,6 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
 							<a href="link" class="mis-container">
 								<figure>
 									<img src="https://mfiles.alphacoders.com/597/597902.jpg" alt=" " class="img-responsive" />
-									<figcaption>Henry Doe
-										<span>Sed maximus eros quis leo congue ipsum sagittis.</span>
-									</figcaption>
 								</figure>
 							</a>
 						</li>
@@ -516,9 +509,6 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
 							<a href="#" class="mis-container">
 								<figure>
 									<img src="https://mfiles.alphacoders.com/597/597902.jpg" alt=" " class="img-responsive" />
-									<figcaption>Laura James
-										<span>Sed maximus eros quis leo congue ipsum sagittis.</span>
-									</figcaption>
 								</figure>
 							</a>
 						</li>
@@ -526,9 +516,7 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
 							<a href="#" class="mis-container">
 								<figure>
 									<img src="https://mfiles.alphacoders.com/597/597902.jpg" alt=" " class="img-responsive" />
-									<figcaption>Thomas Carl
-										<span>Sed maximus eros quis leo congue ipsum sagittis.</span>
-									</figcaption>
+							
 								</figure>
 							</a>
 						</li>
@@ -536,9 +524,7 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
 							<a href="#" class="mis-container">
 								<figure>
 									<img src="https://mfiles.alphacoders.com/597/597902.jpg" alt=" " class="img-responsive" />
-									<figcaption>Rosy Crisp
-										<span>Sed maximus eros quis leo congue ipsum sagittis.</span>
-									</figcaption>
+								
 								</figure>
 							</a>
 						</li>
@@ -587,7 +573,7 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
 							<div class="col-md-10 col-sm-10 col-xs-10 contact-text-agileinf0">
 								<h4>Mail us</h4>
 								<h5>
-									<a href="mailto:eduvysupervision@gmail.com">eduvysupervision@gmail.com</a>
+									<a href="mailto:Hansissupervision@gmail.com">Hansissupervision@gmail.com</a>
 								</h5>
 							</div>
 							<div class="clearfix"></div>
@@ -624,7 +610,7 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
 				<div class="col-md-8 col-offset-2" style="margin-left:17%">
 					
 					<span class="about-us-content">
-						<h1 class="aboutus">Journey</h1>Once , EDUVY was just a name . But , today, it’s a demand to spread a digital fragrance among learning
+						<h1 class="aboutus">Journey</h1>Once , Hansis was just a name . But , today, it’s a demand to spread a digital fragrance among learning
 						students as well as educators . </span>
 					<span class="about-us-content">
 						<h1 class="aboutus">Vision</h1>To provide educational instituitions with a unique and highly parametrized product , a software with analytical
@@ -654,19 +640,19 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
 							<div class="footer_grid_left1_pos">
 								<ul>
 									<li>
-										<a href="https://www.facebook.com/Eduvy-Supervision-1813005295387346/?modal=admin_todo_tour" target="_blank" class="facebook">
+										<a href="https://m.facebook.com/hansisitsupervision" target="_blank" class="facebook">
 											<i class="fa fa-facebook" aria-hidden="true"></i>Facebook</a>
 									</li>
 									<li>
-										<a href="https://twitter.com/EduvyS" class="twitter" target="_blank">
+										<a href="https://twitter.com/HansisIt" class="twitter" target="_blank">
 											<i class="fa fa-twitter" aria-hidden="true"></i>Twitter</a>
 									</li>
 									<li>
-										<a href="https://plus.google.com/u/0/" class="google" target="_blank">
+										<a href="https://plus.google.com/u/0/112022467491401000582" class="google" target="_blank">
 											<i class="fa fa-google-plus" aria-hidden="true"></i>Google+</a>
 									</li>
 									<li>
-										<a href="https://www.instagram.com/eduvysupervision/" class="instagram" target="_blank">
+										<a href="https://www.instagram.com/hansisitsupervision" class="instagram" target="_blank">
 											<i class="fa fa-linkedin f5" aria-hidden="true"></i>Instagram</a>
 									</li>
 								</ul>
@@ -675,29 +661,29 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
 					</div>
 					<div class="col-md-6 col-sm-4 col-xs-4 footer_grid_right">
 						<h2>
-							<a href="index.html">Eduvy</a>
+							<a href="index.html">Hansis</a>
 						</h2>
 					</div>
 					<div class="clearfix"> </div>
 				</div>
 				<div class="col-md-6 footer_grid1_left">
 					<p>&copy; 2017 Literature. All rights reserved | Design by
-						<a href="https://school-in-pocket.herokuapp.com/">Eduvy</a>
+						<a href="https://school-in-pocket.herokuapp.com/">Hansis</a>
 					</p>
 				</div>
 				<div class="col-md-6 footer_grid1_right">
 					<ul>
 						<li>
-							<a href="#about" class="scroll">About</a>
+							<a href="/" class="scroll">Home</a>
 						</li>
 						<li>
 							<a href="#services" class="scroll">Services</a>
 						</li>
 						<li>
-							<a href="#faculties" class="scroll">Faculties</a>
+							<a href="#gallery" class="scroll">Features</a>
 						</li>
 						<li>
-							<a href="#gallery" class="scroll">Gallery</a>
+							<a href="#about" class="scroll">About</a>
 						</li>
 						<li>
 							<a href="#mail" class="scroll">Mail Us</a>
